<resources>
    <string name="app_name">Daily UpDates</string>

    <!-- Base application theme. -->
    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" />

    <style name="ProgressHudDialogTheme" parent="android:Theme.DeviceDefault.Light.Dialog">
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowFrame">@null</item>
    </style>

    <style name="spinnerTheme">
        <item name="android:textColor">@color/maroonRed</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textStyle">bold</item>
    </style>
    <!-- <string name="app_name">Firebase Auth</string>-->
    <string name="action_sign_in_short">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="application_attendence">APPLICATION TO ATTENDENCE SHEET</string>
    <string name="btn_signIn">SIGN IN</string>
    <string name="btn_signUp">SING UP</string>
    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="enter_fullName">Please Enter Full Name</string>
    <string name="enter_email">Please Enter Email Address</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_mobileNo">Please Enter Mobile Number</string>
    <string name="select_department">Please Select Department</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="enter_project">Please Enter Project Name</string>
    <string name="select_date">Please Select Date</string>
    <string name="select_InTime">Please Select In-Time</string>
    <string name="select_OutTime">Please Select Out-Time</string>
    <string name="enter_totalWork">Please Enter Total Working Hours</string>
    <string name="enter_task">Please Enter Task</string>

    <string name="admin_deshboard">Welcome to Admin dashboard page</string>
    <string name="hr_deshboard">Welcome to HR dashboard page</string>
    <string name="home_page">Welcome to Home Page</string>
    <string name="account_is_Disable">Please Contact Us HR ! Your Account is Disable</string>
    <string name="account_is_Deleted">Please Contact Us HR ! Your Account is Deleted</string>
    <string name="task_save">Task Save</string>
    <string name="status_change">Status Change Successfull</string>
    <string name="pending_user">User Account activated Please Contact to HR?</string>
    <string name="activated_user">User Account Activated</string>
    <string name="delete_user">User account deleted Successfull</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="reset_link">We have sent you instructions to reset your password!</string>
    <string name="reset_failed">Failed to send reset email!</string>

    <string name="created_user_account">Your Account Created was Succeccfully Please Contact To HR.</string>
    <string name="logOut">Logout Succesfull</string>
    <string name="back_press">Please 2 times press on back button</string>

    <string name="googleMapAPIkey" translatable="false">AIzaSyBP0ej1goyRxrd5JYF5_b9wAA_4bKdLtFo</string>

</resources>